Modification de contenu footer + email

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,19 +21,19 @@ import Hero from '../components/Hero.astro';
 			</Hero>
 
 			<section>
-				<h2 class="section-title">Background</h2>
+				<h2 class="section-title">Description</h2>
 				<div class="content">
 					<p>
 						Après avoir travaillé pendant 18 ans dans le domaine de la restauration, j'ai pris la décision de me reconvertir
 						dans le développement web. Cette décision vise à sortir de ma zone de confort et à acquérir de nouvelles compétences
 						dans un domaine qui m'a attiré ces dernières années et qui suscite mon intérêt..
-					</p>
+					</p><br>
 					<p>
 						Suite à une sélection par des tests MRS et une immersion de trois jours (piscine) pour rejoindre le Campus Numérique In The Alps à Annecy, je débute une formation de deux ans en développement
 						web et mobile. Cette formation comprend un programme de six mois axé sur la culture numérique, suivi de six mois dédiés à l'apprentissage
 						de divers langages de programmation et à la réalisation de projets en équipe, et enfin une année en entreprise
 						pour mettre en pratique les compétences acquises.
-					</p>
+					</p><br>
 					<p>
 						Ce qui me caractérise le plus, c'est ma capacité à m'adapter à de nouveaux environnements et à apprendre de nouvelles choses et de nouvelles
 						technologies.
@@ -50,7 +50,7 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>Curieux, Créatif, Autonome, Organisé, Dynamique, Polyvalent, Travail en équipe</p>
+					<p>Curieux, Créatif, Autonome, Organisé, Dynamique, Polyvalent, Travail en équipe.</p>
 				</div>
 			</section>
 		</main>
