--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, je m'apelle Laurent Escure"
-					tagline="Je suis développeur Full Stack, basé à Viry(74)."
+					title="Bonjour, je suis Laurent Escure"
+					tagline="Développeur Fullstack, basé à Viry(74)."
 					align="start"
 				>
 					<div class="roles">
