Travail sur le contenu de mes projets + modification des photos

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -26,7 +26,7 @@ import Hero from '../components/Hero.astro';
 					<p>
 						Après avoir travaillé pendant 18 ans dans le domaine de la restauration, j'ai pris la décision de me reconvertir
 						dans le développement web. Cette décision vise à sortir de ma zone de confort et à acquérir de nouvelles compétences
-						dans un domaine qui m'a attiré ces dernières années et qui suscite mon intérêt..
+						dans un domaine qui m'a attiré ces dernières années et qui suscite mon intérêt.
 					</p><br>
 					<p>
 						Suite à une sélection par des tests MRS et une immersion de trois jours (piscine) pour rejoindre le Campus Numérique In The Alps à Annecy, je débute une formation de deux ans en développement
