--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,11 +10,11 @@ import Hero from '../components/Hero.astro';
 		<main class="wrapper about">
 			<Hero
 				title="A Propos"
-				tagline="Découvrez mon parcours et mes compétences."
+				tagline="Découvrez mon parcours et mon savoir-être."
 			>
 				<img
-					width="1553"
-					height="873"
+					width="517"
+					height="445"
 					src="/assets/portrait.jpg"
 					alt="Laurent Escure au travail"
 				/>
@@ -25,7 +25,7 @@ import Hero from '../components/Hero.astro';
 				<div class="content">
 					<p>
 						Après avoir travaillé pendant 18 ans dans le domaine de la restauration, j'ai pris la décision de me reconvertir
-						dans le développement web. Cette décision vise à sortir de ma zone de confort et à acquérir de nouvelles compétences
+						dans le développement web. Cette décision visait à sortir de ma zone de confort et à acquérir de nouvelles compétences
 						dans un domaine qui m'a attiré ces dernières années et qui suscite mon intérêt.
 					</p><br>
 					<p>
@@ -50,7 +50,7 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>Curieux, Créatif, Autonome, Organisé, Dynamique, Polyvalent, Travail en équipe.</p>
+					<p>Curieux, créatif, autonome, organisé, Dynamique, polyvalent, persévèrent, Empathique, Travail en équipe.</p>
 				</div>
 			</section>
 		</main>
