--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -4,17 +4,17 @@ import Icon from './Icon.astro';
 
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" ></Icon>
+		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Full Stack</h2>
 		<p>J'adore PHP Symfony, toujours apprendre de nouvelles choses et surtout de nature très curieux, c'est poour cela que j'aspire a apprendre de nouveaux langages.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" ></Icon>
+		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Collaboration</h2>
 		<p>Travailler en équipe, pair-programming et surtout échanger, avoir une bonne communication avec mes collègues pour avoir une meilleure cohésion pour avancer sur les projets.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" ></Icon>
+		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Adaptabilité</h2>
 		<p>Fort de mon expérience professionnelle passé, je m'adapte rapidement dans un nouvel environnement et à toute situation.</p>
 	</div>
