--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Full Stack</h2>
-		<p>J'adore PHP Symfony, toujours apprendre de nouvelles choses et surtout de nature très curieux, c'est poour cela que j'aspire a apprendre de nouveaux langages.</p>
+		<p>J'adore PHP Symfony, toujours apprendre de nouvelles choses et surtout de nature très curieux, c'est pour cela que j'aspire à apprendre de nouveaux langages.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
