Modification du contenu projet v2.2

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,17 +6,17 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Full Stack</h2>
-		<p>J'adore PHP Symfony, toujours apprendre de nouvelles choses et surtout de nature très curieux, c'est pour cela que j'aspire à apprendre de nouveaux langages.</p>
+		<p>J'ai acquis des compétences en PHP Symfony et je suis également intéressé par le développement frontend. Ma soif d'apprendre et ma curiosité naturelle m'incitent à explorer de nouveaux langages et technologies.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Collaboration</h2>
-		<p>Travailler en équipe, pair-programming et surtout échanger, avoir une bonne communication avec mes collègues pour avoir une meilleure cohésion pour avancer sur les projets.</p>
+		<p>Collaborer en équipe, pratiquer le pair-programming et favoriser la communication avec mes collègues sont des éléments essentiels pour garantir une cohésion optimale et progresser efficacement sur les projets.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient></Icon>
 		<h2>Adaptabilité</h2>
-		<p>Fort de mon expérience professionnelle passé, je m'adapte rapidement dans un nouvel environnement et à toute situation.</p>
+		<p>Grâce à mon expérience professionnelle antérieure, je suis capable de m'adapter rapidement à de nouveaux environnements et à diverses situations.</p>
 	</div>
 </section>
 
