Modification du contenu projet v2.3

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,8 +13,8 @@ import Hero from '../components/Hero.astro';
 				tagline="Découvrez mon parcours et mon savoir-être."
 			>
 				<img
-					width="1553"
-					height="873"
+					width="517"
+					height="445"
 					src="/assets/portrait.jpg"
 					alt="Laurent Escure au travail"
 				/>
@@ -30,7 +30,7 @@ import Hero from '../components/Hero.astro';
 					</p><br>
 					<p>
 						Suite à une sélection par des tests MRS et une immersion de trois jours (piscine) pour rejoindre le Campus Numérique In The Alps à Annecy, je débute une formation de deux ans en développement
-						web et mobile. Cette formation comprend un programme de six mois axé sur la culture numérique, suivi de six mois dédiés à l'apprentissage
+						web et web mobile. Cette formation comprend un programme de six mois axé sur la culture numérique, suivi de six mois dédiés à l'apprentissage
 						de divers langages de programmation et à la réalisation de projets en équipe, et enfin une année en entreprise
 						pour mettre en pratique les compétences acquises.
 					</p><br>
