Mise à jour + modif contenu

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,7 +50,7 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>Curieux, créatif, autonome, organisé, Dynamique, polyvalent, persévèrent, Empathique, Travail en équipe.</p>
+					<p>Curieux, créatif, autonome, organisé, dynamique, polyvalent, persévèrent, empathique, travail en équipe et l'humour me caractérise.</p>
 				</div>
 			</section>
 		</main>
