Mise à jour + modif contenu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,10 +35,10 @@ const projects = (await getCollection('work'))
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Développeur</Pill>
-						<Pill><Icon icon="rocket-launch" size="1.33em" /> Back</Pill>
-						<Pill><Icon icon="code" size="1.33em" /> Front</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Développeur Back & Front</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Intégration</Pill>
 						<Pill><Icon icon="microphone-stage" size="1.33em" /> Gestion de Projet</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Esprit d'équipe</Pill>
 					</div>
 				</Hero>
 
