Mise à jour + modif contenu

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -44,7 +44,7 @@ import Hero from '../components/Hero.astro';
 			<section>
 				<h2 class="section-title">Diplômes</h2>
 				<div class="content">
-					<p>Bac+2 Developpeur web et web mobile (RNCP).</p>
+					<p>Bac+2 Developpeur web et web mobile (RNCP) (mars 2024).</p>
 				</div>
 			</section>
 			<section>
