--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const currentYear = new Date().getFullYear();
 	</div>
 	<p class="socials">
 		<a href="https://github.com/LRTESC"> GitHub</a>
-		<a href="https://www.linkedin.com/in/laurent-escure-86216112b/"> Linkedin</a>
+		<a href="https://www.linkedin.com/in/laurent-escure/"> Linkedin</a>
 		<a href="https://www.instagram.com/lrt_esc/"> Instagram</a>
 	</p>
 </footer>
