Modification de contenu "about" et mise à jour

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,20 +24,20 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Description</h2>
 				<div class="content">
 					<p>
-						Après avoir travaillé pendant 18 ans dans le domaine de la restauration, j'ai pris la décision de me reconvertir
-						dans le développement web. Cette décision visait à sortir de ma zone de confort et à acquérir de nouvelles compétences
-						dans un domaine qui m'a attiré ces dernières années et qui suscite mon intérêt.
+						Après 18 ans d'expérience dans le domaine de la restauration, j'ai décidé de me reconvertir dans le développement web.
+						Cette décision marque ma volonté de sortir de ma zone de confort et d'acquérir de nouvelles compétences
+						dans un secteur qui m'a attiré ces dernières années et qui éveille mon intérêt.
 					</p><br>
 					<p>
-						Suite à une sélection par des tests MRS et une immersion de trois jours (piscine) pour rejoindre le Campus Numérique In The Alps à Annecy, je débute une formation de deux ans en développement
-						web et web mobile. Cette formation comprend un programme de six mois axé sur la culture numérique, suivi de six mois dédiés à l'apprentissage
-						de divers langages de programmation et à la réalisation de projets en équipe, et enfin une année en entreprise
-						pour mettre en pratique les compétences acquises.
+						Je commence ainsi une formation de deux ans au Campus Numérique In The Alps à Annecy, axée sur le développement web et mobile.
+						Cette formation se divise en trois phases : six mois consacrés à la culture numérique,
+						six mois dédiés à l'apprentissage des langages de programmation et à des projets collaboratifs,
+						et une année en entreprise pour mettre en pratique les compétences acquises.
 					</p><br>
 					<p>
-						Ce qui me caractérise le plus, c'est ma capacité à m'adapter à de nouveaux environnements et à apprendre de nouvelles choses et de nouvelles
-						technologies.
-						De nature ouverte, j'accorde une grande importance à la communication et au partage de connaissance.
+						Ce qui me définit le mieux, c'est ma capacité à m'adapter rapidement à de nouveaux environnements et
+						à assimiler de nouvelles technologies. Ouvert d'esprit et adepte du travail en équipe, je privilégie la communication
+						et le partage des connaissances.
 					</p>
 				</div>
 			</section>
